--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <meta property="og:image" content="http://cdn.video.nationalgeographic.com/dims4/default/c75dd80/2147483647/thumbnail/354x199>/quality/90/?url=http%3A%2F%2Fpmdvod.nationalgeographic.com%2FNG_Video%2F980%2F231%2F44209_1_1280x720_640x360_177546819636.jpg" />
 <meta property="og:title" content="tes" />
 <meta property="og:description" content="tes" />
+<link rel="image_src" href="http://cdn.video.nationalgeographic.com/dims4/default/c75dd80/2147483647/thumbnail/354x199>/quality/90/?url=http%3A%2F%2Fpmdvod.nationalgeographic.com%2FNG_Video%2F980%2F231%2F44209_1_1280x720_640x360_177546819636.jpg" />
 <h1> crush love back?</h1>
+
