--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta name="description" content="Test." />
+<meta name="keywords" content="mcdonalds, taco bell, celebrities, health products, life" />
+<meta property="og:site_name" content="crushloveback.github.io" />
+<meta property="og:type" content="article" />
+<meta property="og:url" content="http://crushloveback.github.io" />
 <meta property="og:image" content="http://cdn.video.nationalgeographic.com/dims4/default/c75dd80/2147483647/thumbnail/354x199>/quality/90/?url=http%3A%2F%2Fpmdvod.nationalgeographic.com%2FNG_Video%2F980%2F231%2F44209_1_1280x720_640x360_177546819636.jpg" />
 <meta property="og:title" content="tes" />
 <meta property="og:description" content="tes" />
