--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta property="og:site_name" content="crushloveback.github.io" />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="http://crushloveback.github.io" />
-<meta property="og:image" content="http://cdn.video.nationalgeographic.com/dims4/default/c75dd80/2147483647/thumbnail/354x199>/quality/90/?url=http%3A%2F%2Fpmdvod.nationalgeographic.com%2FNG_Video%2F980%2F231%2F44209_1_1280x720_640x360_177546819636.jpg" />
+<meta property="og:image" content="http://cdn20.1cak.com/posts/4ed54f576b726b8695a9b8f26406803f_t.jpg"/> 
 <meta property="og:title" content="tes" />
 <meta property="og:description" content="tes" />
 <link rel="image_src" href="http://cdn.video.nationalgeographic.com/dims4/default/c75dd80/2147483647/thumbnail/354x199>/quality/90/?url=http%3A%2F%2Fpmdvod.nationalgeographic.com%2FNG_Video%2F980%2F231%2F44209_1_1280x720_640x360_177546819636.jpg" />
