--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <meta name="keywords" content="mcdonalds, taco bell, celebrities, health products, life" />
-<meta property="og:site_name" content="crushloveback.github.io" />
+<meta property="og:site_name" content="crushloveanswer.github.io" />
 <meta property="og:type" content="article" />
-<meta property="og:url" content="https://crushloveback.github.io" />
+<meta property="og:url" content="https://crushloveanswer.github.io" />
 <meta property="og:image" content=""/> 
 <meta property="og:title" content="Does your crush love you back?" />
 <meta property="og:description" content="Does your crush love you back???" />
