--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <meta property="og:site_name" content="crushloveanswer.github.io" />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://crushloveanswer.github.io" />
-<meta property="og:image" content=""/> 
+<meta property="og:image" content="https://maxcdn.icons8.com/Share/icon/Alphabet//question_mark1600.png"/> 
 <meta property="og:title" content="Does your crush love you back?" />
 <meta property="og:description" content="Does your crush love you back???" />
 <h1> crush love back?</h1>
